Editeur de categorie

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -70,3 +70,7 @@ $xsmall-width: map.get($grid-breakpoints, xs);
     margin-left: 0.5rem;
     margin-right: 0.5rem;
 }
+
+.categorie-champ DIV {
+    margin-bottom: 1rem;
+}
