Fix disable selecteur groupe

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -61,7 +61,7 @@ input.pin {
   padding: 1em;
 }
 
-div.table {}
+/*div.table {}*/
 div.table div.table-header {
   background-color: #9eb1bb;
   font-weight: bolder;
