Ajout copie champs text dans clipboard

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -82,3 +82,8 @@ SPAN.ql-picker-label {
 .ql-snow .ql-stroke, .ql-snow .ql-fill {
     stroke: $fourth-color;
 }
+
+.copie {
+    color: green;
+    font-weight: 700;
+}
