--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -83,6 +83,10 @@ SPAN.ql-picker-label {
     stroke: $fourth-color;
 }
 
+.champ-copiable {
+    cursor: pointer;
+}
+
 .copie {
     color: green;
     font-weight: 700;
